modified pre, next button functions

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div>
         <div id = "nav"> 
             <button class = "pre-next question-navi" id = "pre-button"> Previous</button>
-            <button class = "question-navi" id = "nav1" value = "0">1</button>
+            <!--<button class = "question-navi" id = "nav1" value = "0">1</button>
             <button class = "question-navi" id = "nav2" value = "1">2</button>
             <button class = "question-navi" id = "nav3" value = "2">3</button>
             <button class = "question-navi" id = "nav4" value = "3">4</button>
-            <button class = "question-navi" id = "nav5" value = "4">5</button>
+            <button class = "question-navi" id = "nav5" value = "4">5</button>-->
             <button class = "pre-next question-navi" id = "next-button"> Next</button>
             <div class = "question-navi" id = "score-id">Score</div>
             
@@ -38,7 +38,8 @@
         </div>
         <div id = "instructions"> Helpful hints when selecting options. <br>
         To check answers : <strong>Single Click.</strong> (Select, Submit and go to Next -individualy).     <br>
-        Just score is enough: <strong>Double Click.</strong> (Select, submit and Next all at once).  </div>
+        Just score is enough: <strong>Double Click or Select and click Next</strong> (Select, submit and Next all at once).<br>  
+        </div>
         </div>
     <script type="text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src = "quizApp.js"></script>
